<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_tambah_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:id="@+id/form_tambah_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/white"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/title_hint"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_latout_massage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top">

                    <EditText
                        android:id="@+id/input_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="5"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:scrollHorizontally="false"
                        android:hint="@string/message_hint"
                        android:textColor="@color/primary_text" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <Button android:id="@+id/btn_simpan_note"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_simpan_note"
                    android:background="@color/primary"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/icons"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <include layout="@layout/loading"></include>
</LinearLayout>